vercre-holder/src/snapshots/vercre_holder__issuance__tests__credential_request.snap
---
source: vercre-holder/src/issuance.rs
assertion_line: 520
expression: "&request"
---
format: jwt_vc_json
proof:
  proof_type: jwt
  jwt: eyJhbGciOiJFZERTQSIsInR5cCI6Im9wZW5pZDR2Y2ktcHJvb2Yrand0Iiwia2lkIjoiZGlkOmp3azpleUpqY25ZaU9pSllNalUxTVRraUxDSnJkSGtpT2lKUFMxQWlMQ0oxYzJVaU9pSmxibU1pTENKNElqb2lNMHhuT1hsMmFVRnRWRVJEZFZaUGVVeFlTVE5zY1RsVE1uQkliVGN6ZVhJemQzZEJhMnAzUTBGb2R5SjkjMCJ9.eyJpc3MiOiI5NmJmYjljYi0wNTEzLTdkNjQtNTUzMi1iZWQ3NGM0OGY5YWIiLCJhdWQiOiJodHRwOi8vdmVyY3JlLmlvIiwiaWF0IjoxNzE3NTQ2MTY3fQ.5rk-2NGctYtL_umc7VBh8qwmeWPe4U-K5XZxMMp2nR00XWIMtWNope2ahaWN5Pe3HJyYhQQ9p4NWm3rZQ5esCQ
credential_identifier: EmployeeID_JWT
credential_definition:
  "@context":
    - "https://www.w3.org/2018/credentials/v1"
    - "https://www.w3.org/2018/credentials/examples/v1"
  type:
    - VerifiableCredential
    - EmployeeIDCredential
  credentialSubject:
    email:
      mandatory: true
      value_type: string
      display:
        - name: Email
          locale: en-NZ
    familyName:
      mandatory: true
      value_type: string
      display:
        - name: Family name
          locale: en-NZ
    givenName:
      mandatory: true
      value_type: string
      display:
        - name: Given name
          locale: en-NZ
