vercre-holder/src/snapshots/vercre_holder__issuance__tests__proof.snap
---
source: vercre-holder/src/issuance.rs
assertion_line: 507
expression: "&p"
---
proof_type: eyJhbGciOiJFZERTQSIsImtpZCI6ImRpZDpqd2s6ZXlKamNuWWlPaUpZTWpVMU1Ua2lMQ0pyZEhraU9pSlBTMUFpTENKMWMyVWlPaUpsYm1NaUxDSjRJam9pTTB4bk9YbDJhVUZ0VkVSRGRWWlBlVXhZU1ROc2NUbFRNbkJJYlRjemVYSXpkM2RCYTJwM1EwRm9keUo5IzAiLCJ0eXAiOiJvcGVuaWQ0dmNpLXByb29mK2p3dCJ9.eyJpc3MiOiJkaWQ6andrOmV5SmpjbllpT2lKWU1qVTFNVGtpTENKcmRIa2lPaUpQUzFBaUxDSjFjMlVpT2lKbGJtTWlMQ0o0SWpvaU0weG5PWGwyYVVGdFZFUkRkVlpQZVV4WVNUTnNjVGxUTW5CSWJUY3plWEl6ZDNkQmEycDNRMEZvZHlKOSIsImF1ZCI6Imh0dHA6Ly92ZXJjcmUuaW8iLCJpYXQiOjE3MTc1NDYxNjcsIm5vbmNlIjoiIn0
jwt: eyJhbGciOiJFZERTQSIsImtpZCI6ImRpZDpqd2s6ZXlKamNuWWlPaUpZTWpVMU1Ua2lMQ0pyZEhraU9pSlBTMUFpTENKMWMyVWlPaUpsYm1NaUxDSjRJam9pTTB4bk9YbDJhVUZ0VkVSRGRWWlBlVXhZU1ROc2NUbFRNbkJJYlRjemVYSXpkM2RCYTJwM1EwRm9keUo5IzAiLCJ0eXAiOiJvcGVuaWQ0dmNpLXByb29mK2p3dCJ9.eyJpc3MiOiJkaWQ6andrOmV5SmpjbllpT2lKWU1qVTFNVGtpTENKcmRIa2lPaUpQUzFBaUxDSjFjMlVpT2lKbGJtTWlMQ0o0SWpvaU0weG5PWGwyYVVGdFZFUkRkVlpQZVV4WVNUTnNjVGxUTW5CSWJUY3plWEl6ZDNkQmEycDNRMEZvZHlKOSIsImF1ZCI6Imh0dHA6Ly92ZXJjcmUuaW8iLCJpYXQiOjE3MTc1NDYxNjcsIm5vbmNlIjoiIn0.FoR3u2eKyEi1MH4j2hHR3-4bwwyaSZPK_Pqgq93vG634m02lt5rpHUk3H9GL27LHDuCbLVah5VSxIh0bzoErAQ
