vercre-holder/src/snapshots/vercre_holder__issuance__tests__proof_jwt.snap
---
source: vercre-holder/src/issuance.rs
assertion_line: 483
expression: "&jwt"
---
header:
  alg: EdDSA
  kid: "did:jwk:eyJrdHkiOiJPS1AiLCJjcnYiOiJYMjU1MTkiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9#0"
  typ: openid4vci-proof+jwt
claims:
  iss: "did:jwk:eyJrdHkiOiJPS1AiLCJjcnYiOiJYMjU1MTkiLCJ1c2UiOiJlbmMiLCJ4IjoiM0xnOXl2aUFtVERDdVZPeUxYSTNscTlTMnBIbTczeXIzd3dBa2p3Q0FodyJ9"
  aud: "http://vercre.io"
  iat: "[timestamp]"
  nonce: ""
